--- a/styles/relax-time.less
+++ b/styles/relax-time.less
@@ -4,5 +4,33 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.relax-time {
+.relax_time {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+}
+
+.boton {
+  width: 20%;
+  height: 30px;
+  font-size: 16px;
+  color: white;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid transparent;
+}
+
+.boton:hover {
+  border-bottom: 2px solid white;
+}
+
+.boton:active {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.gif_display {
+}
+
+.gif {
+  width: 100%;
 }
